--- a/P8105_hw5_LDL2113.Rmd
+++ b/P8105_hw5_LDL2113.Rmd
@@ -7,7 +7,26 @@ output: github_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
 ```
+
+
+## Problem 1
+
+*Load IRIS data from the tidyverse*
+
+```{r}
+set.seed(10)
+
+iris_with_missing = iris %>% 
+  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
+  mutate(Species = as.character(Species))
+```
+
+The data appears to be measurements of individual iris flowers (petal and sepal lengths and widths to the nearest 10th of a unit). Included also are species names.
+
+*Address 2 cases: For numeric variables, you should fill in missing values with the mean of non-missing values
+For character variables, you should fill in missing values with "virginica." Write a function that takes a vector as an argument; replaces missing values using the rules defined above; and returns the resulting vector. Apply this function to the columns of iris_with_missing using a map statement.*
 
 ## R Markdown
 
