--- a/P8105_hw5_LDL2113.md
+++ b/P8105_hw5_LDL2113.md
@@ -3,56 +3,43 @@ Homework 5
 Lisa Eisler
 11/6/2019
 
-## Problem 1
+# Problem 1
 
-*Load IRIS data from the tidyverse*
+#### Load IRIS data from the tidyverse
 
 ``` r
-set.seed(10)
-
 iris_with_missing = iris %>% 
   map_df(~replace(.x, sample(1:150, 20), NA)) %>%
   mutate(Species = as.character(Species))
 ```
 
-The data appears to be measurements of individual iris flowers (petal
+*The data appears to be measurements of individual iris flowers (petal
 and sepal lengths and widths to the nearest 10th of a unit). Included
-also are species names.
+also are species names.*
 
-*Address 2 cases: For numeric variables, you should fill in missing
-values with the mean of non-missing values For character variables, you
-should fill in missing values with “virginica.” Write a function that
-takes a vector as an argument; replaces missing values using the rules
-defined above; and returns the resulting vector. Apply this function to
-the columns of iris\_with\_missing using a map statement.*
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax
-for authoring HTML, PDF, and MS Word documents. For more details on
-using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that
-includes both content as well as the output of any embedded R code
-chunks within the document. You can embed an R code chunk like this:
+#### For numeric variables, you should fill in missing values with the mean of non-missing values. For character variables, you should fill in missing values with “virginica.”
 
 ``` r
-summary(cars)
+replace_na = function(x) {
+  output = vector(length = length(x))
+  for (i in 1:length(x)) {
+    if (is.numeric(x[i])) {
+      mean_i = mean(x[!is.na(x)])
+      if (!is.na(x[i])) {
+        output[i] = x[i]
+      } else {
+        output[i] = mean_i
+      }
+    } else if (is.character(x[i])) {
+      if (!is.na(x[i])) {
+        output[i] = x[i]
+      } else {
+        output[i] = "virginica"
+      }
+    }
+  }
+  output
+}
+iris_complete = map(iris_with_missing, replace_na) %>%
+  as.data.frame()
 ```
-
-    ##      speed           dist       
-    ##  Min.   : 4.0   Min.   :  2.00  
-    ##  1st Qu.:12.0   1st Qu.: 26.00  
-    ##  Median :15.0   Median : 36.00  
-    ##  Mean   :15.4   Mean   : 42.98  
-    ##  3rd Qu.:19.0   3rd Qu.: 56.00  
-    ##  Max.   :25.0   Max.   :120.00
-
-## Including Plots
-
-You can also embed plots, for example:
-
-![](P8105_hw5_LDL2113_files/figure-gfm/pressure-1.png)<!-- -->
-
-Note that the `echo = FALSE` parameter was added to the code chunk to
-prevent printing of the R code that generated the plot.
