--- a/P8105_hw5_LDL2113.Rmd
+++ b/P8105_hw5_LDL2113.Rmd
@@ -8,7 +8,7 @@ output: github_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
-set.seed(10)
+library(purrr)
 ```
 
 
@@ -17,6 +17,8 @@ set.seed(10)
 #### Load IRIS data from the tidyverse
 
 ```{r}
+set.seed(10)
+
 iris_with_missing = iris %>% 
   map_df(~replace(.x, sample(1:150, 20), NA)) %>%
   mutate(Species = as.character(Species))
@@ -49,4 +51,39 @@ replace_na = function(x) {
 }
 iris_complete = map(iris_with_missing, replace_na) %>%
   as.data.frame()
+```
+
+# Problem 2
+
+Create a tidy dataframe containing data from all participants, including the subject ID, arm, and observations over time:
+
+Start with a dataframe containing all file names; the list.files function will help
+Iterate over file names and read in data for each subject using purrr::map and saving the result as a new variable in the dataframe
+Tidy the result; manipulate file names to include control arm and subject ID, make sure weekly observations are “tidy”, and do any other tidying that’s necessary
+Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
+
+```{r}
+filenames = list.files("data")
+experiment_data = 
+  tibble(
+    filenames = list.files("data"),
+    path = str_c("./data/", filenames)
+  ) %>% 
+  mutate(
+    data = map(path, read_csv)
+  ) %>% 
+  unnest() %>% 
+  select(-path) %>% 
+  pivot_longer(
+    week_1:week_8,
+    names_to = "week",
+    values_to = "obs"
+  ) %>% 
+  mutate(
+    arm = substr(filenames, 1, 3),
+    arm = recode(arm, "con" = "control",
+                      "exp" = "experiment"),
+    subject_id = substr(filenames, 5, 6),
+    subject_id = as.numeric(subject_id)
+  ) 
 ```
