--- a/P8105_hw5_LDL2113.Rmd
+++ b/P8105_hw5_LDL2113.Rmd
@@ -53,16 +53,12 @@ iris_complete = map(iris_with_missing, replace_na) %>%
   as.data.frame()
 ```
 
+
 # Problem 2
 
-Create a tidy dataframe containing data from all participants, including the subject ID, arm, and observations over time:
+Create a tidy dataframe containing data from all participants in the experiment, including the subject ID, arm, and observations over time
 
-Start with a dataframe containing all file names; the list.files function will help
-Iterate over file names and read in data for each subject using purrr::map and saving the result as a new variable in the dataframe
-Tidy the result; manipulate file names to include control arm and subject ID, make sure weekly observations are “tidy”, and do any other tidying that’s necessary
-Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
-
-```{r}
+```{r, message=FALSE, warning=FALSE}
 filenames = list.files("data")
 experiment_data = 
   tibble(
@@ -77,13 +73,32 @@ experiment_data =
   pivot_longer(
     week_1:week_8,
     names_to = "week",
-    values_to = "obs"
+    values_to = "observation"
   ) %>% 
   mutate(
     arm = substr(filenames, 1, 3),
     arm = recode(arm, "con" = "control",
                       "exp" = "experiment"),
     subject_id = substr(filenames, 5, 6),
-    subject_id = as.numeric(subject_id)
-  ) 
+    subject_id = as.numeric(subject_id),
+       week = substr(week, 6, 7),
+    week = as.numeric(week)
+  ) %>% 
+  select(subject_id, week, arm, observation)
 ```
+
+Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
+
+```{r}
+  experiment_data %>% 
+  ggplot(aes(x = week, y = observation)) + 
+  geom_line(aes(group = subject_id)) + 
+  facet_grid(.~arm) +
+   labs(
+    title = "Observation For Subjects Over Time",
+    x = "Week",
+    y = "Observation"
+   )
+```
+
+*The weekly measurements in the experimental group appear to have increased over time.  The weekly measurements in the control group appear to have remained stable, perhaps slightly decreasing over time.*
