--- a/P8105_hw5_LDL2113.md
+++ b/P8105_hw5_LDL2113.md
@@ -48,17 +48,8 @@ iris_complete = map(iris_with_missing, replace_na) %>%
 
 # Problem 2
 
-Create a tidy dataframe containing data from all participants, including
-the subject ID, arm, and observations over time:
-
-Start with a dataframe containing all file names; the list.files
-function will help Iterate over file names and read in data for each
-subject using purrr::map and saving the result as a new variable in the
-dataframe Tidy the result; manipulate file names to include control arm
-and subject ID, make sure weekly observations are “tidy”, and do any
-other tidying that’s necessary Make a spaghetti plot showing
-observations on each subject over time, and comment on differences
-between groups.
+Create a tidy dataframe containing data from all participants in the
+experiment, including the subject ID, arm, and observations over time
 
 ``` r
 filenames = list.files("data")
@@ -75,237 +66,37 @@ experiment_data =
   pivot_longer(
     week_1:week_8,
     names_to = "week",
-    values_to = "obs"
+    values_to = "observation"
   ) %>% 
   mutate(
     arm = substr(filenames, 1, 3),
     arm = recode(arm, "con" = "control",
                       "exp" = "experiment"),
     subject_id = substr(filenames, 5, 6),
-    subject_id = as.numeric(subject_id)
-  ) 
+    subject_id = as.numeric(subject_id),
+       week = substr(week, 6, 7),
+    week = as.numeric(week)
+  ) %>% 
+  select(subject_id, week, arm, observation)
 ```
 
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
+Make a spaghetti plot showing observations on each subject over time,
+and comment on differences between groups.
 
-    ## Warning: `cols` is now required.
-    ## Please use `cols = c(data)`
+``` r
+  experiment_data %>% 
+  ggplot(aes(x = week, y = observation)) + 
+  geom_line(aes(group = subject_id)) + 
+  facet_grid(.~arm) +
+   labs(
+    title = "Observation For Subjects Over Time",
+    x = "Week",
+    y = "Observation"
+   )
+```
+
+![](P8105_hw5_LDL2113_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
+
+*The weekly measurements in the experimental group appear to have
+increased over time. The weekly measurements in the control group appear
+to have remained stable, perhaps slightly decreasing over time.*
