--- a/P8105_hw5_LDL2113.md
+++ b/P8105_hw5_LDL2113.md
@@ -53,16 +53,17 @@ experiment, including the subject ID, arm, and observations over time
 
 ``` r
 filenames = list.files("data")
+
 experiment_data = 
   tibble(
     filenames = list.files("data"),
-    path = str_c("./data/", filenames)
+    directory = str_c("./data/", filenames)
   ) %>% 
   mutate(
-    data = map(path, read_csv)
-  ) %>% 
+    data = map(directory, read_csv)
+  ) %>%
   unnest() %>% 
-  select(-path) %>% 
+  select(-directory) %>% 
   pivot_longer(
     week_1:week_8,
     names_to = "week",
