--- a/P8105_hw5_LDL2113.Rmd
+++ b/P8105_hw5_LDL2113.Rmd
@@ -60,16 +60,17 @@ Create a tidy dataframe containing data from all participants in the experiment,
 
 ```{r, message=FALSE, warning=FALSE}
 filenames = list.files("data")
+
 experiment_data = 
   tibble(
     filenames = list.files("data"),
-    path = str_c("./data/", filenames)
+    directory = str_c("./data/", filenames)
   ) %>% 
   mutate(
-    data = map(path, read_csv)
-  ) %>% 
+    data = map(directory, read_csv)
+  ) %>%
   unnest() %>% 
-  select(-path) %>% 
+  select(-directory) %>% 
   pivot_longer(
     week_1:week_8,
     names_to = "week",
