--- a/P8105_hw5_LDL2113.md
+++ b/P8105_hw5_LDL2113.md
@@ -8,8 +8,6 @@ Lisa Eisler
 #### Load IRIS data from the tidyverse
 
 ``` r
-set.seed(10)
-
 iris_with_missing = iris %>% 
   map_df(~replace(.x, sample(1:150, 20), NA)) %>%
   mutate(Species = as.character(Species))
@@ -101,3 +99,25 @@ and comment on differences between groups.
 *The weekly measurements in the experimental group appear to have
 increased over time. The weekly measurements in the control group appear
 to have remained stable, perhaps slightly decreasing over time.*
+
+# Problem 3
+
+``` r
+sim_regression = function(n = 30, beta0 = 2, beta1){
+
+  sim_data = tibble(
+  x = rnorm(n, mean = 1, sd = 1),
+  y = beta0 + beta1*x + rnorm(n, 0, sqrt(50))
+  )
+
+  ls_fit = lm(y ~ x, data = sim_data)
+  
+  ls_tidy = broom::tidy(ls_fit) %>% 
+    janitor::clean_names()
+  
+  tibble(
+    beta1_hat = ls_tidy$estimate[[2]],
+    p_value = ls_tidy$p_value[[2]]
+  )
+}
+```
