--- a/P8105_hw5_LDL2113.md
+++ b/P8105_hw5_LDL2113.md
@@ -5,7 +5,7 @@ Lisa Eisler
 
 # Problem 1
 
-#### Load IRIS data from the tidyverse
+Load IRIS data from the tidyverse
 
 ``` r
 iris_with_missing = iris %>% 
@@ -17,7 +17,9 @@ iris_with_missing = iris %>%
 and sepal lengths and widths to the nearest 10th of a unit). Included
 also are species names.*
 
-#### For numeric variables, you should fill in missing values with the mean of non-missing values. For character variables, you should fill in missing values with “virginica.”
+For numeric variables, you should fill in missing values with the mean
+of non-missing values. For character variables, you should fill in
+missing values with “virginica.”
 
 ``` r
 replace_na = function(x) {
@@ -102,6 +104,8 @@ to have remained stable, perhaps slightly decreasing over time.*
 
 # Problem 3
 
+Set up regression function with specified design elements.
+
 ``` r
 sim_regression = function(n = 30, beta0 = 2, beta1){
 
@@ -117,7 +121,62 @@ sim_regression = function(n = 30, beta0 = 2, beta1){
   
   tibble(
     beta1_hat = ls_tidy$estimate[[2]],
-    p_value = ls_tidy$p_value[[2]]
+    p_value = ls_tidy$p_value[[2]],
+    alpha = 0.05
   )
 }
 ```
+
+Set β1=0. Generate 10000 datasets from the model
+
+``` r
+sim_results_0 = 
+  rerun(10000, sim_regression(30, 2, 0)) %>% 
+  bind_rows() 
+
+head(sim_results_0)
+```
+
+Repeat the above for β1={1,2,3,4,5,6}
+
+``` r
+sim_results_1to6 = 
+  tibble(beta1s = c(1,2,3,4,5,6)) %>% 
+  mutate(
+    output_list = map(.x = beta1s, ~rerun(10000, sim_regression(beta1 = .x))),
+    estimate_dfs = map(output_list, bind_rows)
+  ) %>% 
+  select(-output_list) %>% 
+  unnest(estimate_dfs) %>% 
+  mutate(
+    reject_null = ifelse(p_value < alpha, 1, 0)
+  )
+
+head(sim_results_1to6)
+```
+
+Make a plot showing the proportion of times the null was rejected (the
+power of the test) on the y axis and the true value of β1 on the x axis.
+Describe the association between effect size and power.
+
+``` r
+results_reject = sim_results_1to6 %>%
+  select(beta1s, reject_null) %>%
+  count(beta1s, reject_null) %>% 
+  group_by(beta1s) %>% 
+  transmute(reject_null, percentage_reject = n/sum(n)*100) %>%
+  filter(reject_null == 1)
+
+figure_results_reject = results_reject %>%
+  ggplot(aes(x = beta1s, y = percentage_reject)) + 
+  geom_point() +
+    labs(
+      title = "Rate of Rejecting H0 by Magnitude of Beta1",
+      x = "Beta1",
+      y = "Percent Rejecting H0",
+      caption = "Simulation Data"
+    )
+```
+
+As the magnitude of Beta1 increases (effect size), the power of the
+study (likelihood of rejecting null hypothesis) increases.
