--- a/P8105_hw5_LDL2113.md
+++ b/P8105_hw5_LDL2113.md
@@ -131,11 +131,21 @@ Set β1=0. Generate 10000 datasets from the model
 
 ``` r
 sim_results_0 = 
-  rerun(10000, sim_regression(30, 2, 0)) %>% 
+  rerun(100, sim_regression(30, 2, 0)) %>% 
   bind_rows() 
 
 head(sim_results_0)
 ```
+
+    ## # A tibble: 6 x 3
+    ##   beta1_hat  p_value alpha
+    ##       <dbl>    <dbl> <dbl>
+    ## 1     2.02  0.207     0.05
+    ## 2     1.23  0.182     0.05
+    ## 3     0.603 0.606     0.05
+    ## 4     3.03  0.000149  0.05
+    ## 5    -1.19  0.471     0.05
+    ## 6    -1.49  0.219     0.05
 
 Repeat the above for β1={1,2,3,4,5,6}
 
@@ -143,7 +153,7 @@ Repeat the above for β1={1,2,3,4,5,6}
 sim_results_1to6 = 
   tibble(beta1s = c(1,2,3,4,5,6)) %>% 
   mutate(
-    output_list = map(.x = beta1s, ~rerun(10000, sim_regression(beta1 = .x))),
+    output_list = map(.x = beta1s, ~rerun(100, sim_regression(beta1 = .x))),
     estimate_dfs = map(output_list, bind_rows)
   ) %>% 
   select(-output_list) %>% 
@@ -154,6 +164,16 @@ sim_results_1to6 =
 
 head(sim_results_1to6)
 ```
+
+    ## # A tibble: 6 x 5
+    ##   beta1s beta1_hat p_value alpha reject_null
+    ##    <dbl>     <dbl>   <dbl> <dbl>       <dbl>
+    ## 1      1     1.79  0.271    0.05           0
+    ## 2      1     4.68  0.00349  0.05           1
+    ## 3      1    -0.474 0.779    0.05           0
+    ## 4      1     0.390 0.694    0.05           0
+    ## 5      1     0.839 0.711    0.05           0
+    ## 6      1     4.21  0.00417  0.05           1
 
 Make a plot showing the proportion of times the null was rejected (the
 power of the test) on the y axis and the true value of β1 on the x axis.
